--- a/Maps.Web/Templates/Home.html
+++ b/Maps.Web/Templates/Home.html
@@ -38,6 +38,21 @@
 </section><!-- controls end -->
 
 <section class="small-7 columns graphics">
-    <div class="map"></div>
+    <div id="map" style="height: 275px"></div>
     <div class="events"></div>
 </section><!-- graphics end -->
+
+<script>
+
+		var map = L.map('map').setView([51.505, -0.09], 2);
+
+		L.tileLayer('https://{s}.tiles.mapbox.com/v3/{id}/{z}/{x}/{y}.png', {
+			maxZoom: 18,
+			attribution:
+                'Map data &copy; <a href="http://openstreetmap.org">OpenStreetMap</a> contributors, ' +
+				'<a href="http://creativecommons.org/licenses/by-sa/2.0/">CC-BY-SA</a>, ' +
+				'Imagery © <a href="http://mapbox.com">Mapbox</a>',
+			id: 'examples.map-i86knfo3'
+		}).addTo(map);
+
+</script>
