--- a/Maps.Web/Views/Shared/_Layout.cshtml
+++ b/Maps.Web/Views/Shared/_Layout.cshtml
@@ -4,17 +4,18 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>@ViewBag.Title - My ASP.NET Application</title>
+    <link rel="stylesheet" href="http://cdn.leafletjs.com/leaflet-0.7.3/leaflet.css" />
     @Styles.Render("~/Content/css")
     @Scripts.Render("~/bundles/modernizr")
-
+   
 </head>
 <body>
     <div class="row content">
         @RenderBody()
     </div>
 
+    <script src="~/Scripts/Leaflet.js"></script>
     @Scripts.Render("~/bundles/jquery")
     @RenderSection("scripts", required: false)
-
 </body>
 </html>
